Changes so only Liza character is visible.

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ dist
 .env
 .env.local
 
+characters/*.character.json
+!characters/eliza.character.json
 
 node_modules
 dist/
-
-/characters
 
 db.sqlite
 .idea.env.backup
